--- a/carddrawer/src/main/res/layout/card_drawer_am_overlay.xml
+++ b/carddrawer/src/main/res/layout/card_drawer_am_overlay.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
+    android:background="@color/andes_red_100"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:layout_height="158dp">
 
